# voodoo

./: .gitignore  .ocamlformat  Dockerfile  LICENSE  Makefile  README.md  dune  dune-project  tailwind.config.js  voodoo-client.opam  voodoo-do.opam  voodoo-gen.opam  voodoo-gen.opam.template  voodoo-lib.opam  voodoo-prep.opam  voodoo-web.opam  voodoo.opam  voodoo.opam.template  voodoo_lib.opam  voodoo_prep.opam
.github/workflows/: ci.yml
assemble/: assemble.ml  compile_deps.ml  dune
client/: dune  tailwind.ml  voodoo_client.ml
do/: do.ml  dune
doc/: design.md
lib/: compile.ml  deps.ml  deps.mli  do.ml  dune  dune.ml  index.ml  inputs.ml  link.ml  listm.ml  meta.ml  mld.ml  ocamlobjinfo.ml  odoc.ml  opam.ml  otherdocs.ml  package.ml  package_mlds.ml  paths.ml  prep.ml  sourceinfo.ml  universe.ml  util.ml  version.ml
link/: dune  link.ml
prep/: analyse.ml  dune
solutions/quarantine/: alsa.0.2.3  alsa.0.3.0  arakoon.1.9.0  arakoon.1.9.17  async-uri.0.3.0  async.108.00.01  async.109.07.00  async.112.06.00  async_core.108.00.01  async_core.109.07.00  async_extended.112.06.00  async_extra.108.00.01  async_extra.109.07.00  async_extra.112.06.00  async_kernel.112.06.00  async_ssl.112.24.02  async_ssl.112.24.03  async_ssl.112.35.00  async_ssl.113.00.00  async_unix.108.00.01  async_unix.109.07.00  async_unix.112.06.00  azure-cosmos-db.0.1.6  baardskeerder.0.5.1  bap.0.9.3  bap.0.9.4  bap.0.9.6  bap.0.9.7  base-implicits.base  base-metaocaml-ocamlfind.base  batteries.2.5.0  bechamel-perf.0.1.0  bignum.112.06.00  bignum.112.06.02  blahcaml.2.1  bolt.1.3  bwrap.0.1  cairo.0.4.1  cairo.0.4.2  cairo2.0.4.3  (+1430 more)
solutions/solved/: 0install-gtk.2.15.2  0install-gtk.2.16  0install-gtk.2.17  0install-solver.2.17  0install.2.10  0install.2.11  0install.2.12  0install.2.12.1  0install.2.12.3  0install.2.14  0install.2.14.1  0install.2.15.1  0install.2.15.2  0install.2.16  0install.2.17  0install.2.6.2  0install.2.8  0install.2.9.1  ANSITerminal.0.6  ANSITerminal.0.6.2  ANSITerminal.0.6.3  ANSITerminal.0.6.4  ANSITerminal.0.6.5  ANSITerminal.0.7  ANSITerminal.0.8  ANSITerminal.0.8.1  ANSITerminal.0.8.2  BetterErrors.0.0.1  CamlGI.0.6  Camldiets.0.2  DrawGrammar.0.1.0  DrawGrammar.0.2.0  DrawGrammar.0.2.1  DrawGrammar.0.2.2  FrontC.3.4  FrontC.3.4.1  FrontC.3.4.2  GT.0.2.0  GT.0.3.0  General.0.1.0  (+14541 more)
solutions/solved/_build/: log
solutions/solved/_build/default/.dune/: configurator  configurator.v2
src/voodoo/: auto_generated_index_mld.ml  auto_generated_index_mld.mli  compat.ml  compat.mli  do.ml  do.mli  dune  dune.ml  dune.mli  dune_rules.ml  dune_rules.mli  error_log.ml  error_log.mli  index.ml  index.mli  index_mld_page.mli  js_toplevel.ml  js_toplevel.mli  library_names.ml  library_names.mli  listm.ml  listm.mli  mld.ml  mld.mli  ocamlobjinfo.ml  ocamlobjinfo.mli  odoc.ml  odoc.mli  opam.ml  opam.mli  otherdocs.ml  otherdocs.mli  package.ml  package.mli  package_info.ml  package_info.mli  package_mlds.ml  package_mlds.mli  paths.ml  paths.mli  (+11 more)
src/voodoo-client/: dune  index.html  versions3.json  voodoo_client.ml
src/voodoo-do/: do.ml  do.mli  dune  main.ml
src/voodoo-gen/: components.ml  dune  generate_html_docs.ml  generator.ml  generator.mli  hrefs.ml  link.ml  link.mli  main.ml  markdown.ml  markdown.mli  metadata.ml  odoc_thtml.ml  odoc_thtml.mli  package_info.ml  package_info.mli  pages.ml  rendering.ml  rendering.mli  search_index.ml  search_index.mli  tree.ml  utils.ml
src/voodoo-gen/static/: extra.css
src/voodoo-prep/: dune  jsoo.ml  jsoo.mli  jsoo_cma.ml  jsoo_cma.mli  jsoo_cmi.ml  jsoo_cmi.mli  jsoo_toplevel.ml  jsoo_toplevel.mli  main.ml  main.mli  ocamlfind.ml  ocamlfind.mli  opam.ml  opam.mli  package.ml  package.mli  paths.ml  paths.mli  prep.ml  prep.mli  util.ml  util.mli
src/voodoo-web/: menu.ml  tailwind.ml
src/voodoo/serialize/: dune  package_info.ml  package_info.mli  status.ml  status.mli
static/: extra.css  tailwind.css
styles/: main.css
submit/: .merlin  dune  submit.ml
test/: can-read-library-names.t  can-render-org-files.t  can-render-sources.t  can-render-tables.t  compiler-libs.t  dune  toplevel.t  uninstalled_package.t
test/failures/: menhir.t
test/unit/serialize/: dune  main.ml  test_fpath.ml  test_package_info.ml  test_status.ml  test_string.ml
web/: dune  menu.ml  tailwind.ml
