(env
  (dev
    (flags (:standard -w -39))))

(library
 (name tailwind)
 (modules tailwind))

(executable
 (name voodoo_client)
 (preprocess
  (pps js_of_ocaml-ppx ppx_deriving_yojson))
 (modes js)
 (modules voodoo_client)
 (libraries js_of_ocaml js_of_ocaml-lwt js_of_ocaml-tyxml tailwind))

(alias
 (name default)
 (deps voodoo_client.bc.js index.html versions3.json)
 )
